Changed snake body part size